Fri Nov 13 04:55:15 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/unite/Aspect.h:
        * cuts/utils/unite/Dataflow_Graph.h:
        * cuts/utils/unite/Dataset_Repo.h:
        * cuts/utils/unite/Dataset_Result.h:
        * cuts/utils/unite/Doxygen:
        * cuts/utils/unite/Log_Format.h:
        * cuts/utils/unite/Log_Format_Compiler.h:
        * cuts/utils/unite/Log_Format_Data_Entry.h:
        * cuts/utils/unite/Presentation_Service.h:
        * cuts/utils/unite/Presentation_Service_Manager.h:
        * cuts/utils/unite/Relation.h:
        * cuts/utils/unite/Unite_Test.h:
        * cuts/utils/unite/Variable.h:

          . Changed the name of the Doxygen model from UNITE_Common
            to UNITE_Core.

Fri Nov 13 04:34:09 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/unite/Dataset_Result.h:
        * cuts/utils/unite/Dataset_Result.cpp:
        * cuts/utils/unite/Unite_App.h:
        * cuts/utils/unite/Unite_App.cpp:
        * cuts/utils/unite/Unite_Aspect_File.inl:
        * cuts/utils/unite/Unite_Test.h:
        * cuts/utils/unite/Unite_Test.inl:
        * cuts/utils/unite/cuts-unite.h:
        * cuts/utils/unite/cuts-unite.inl:
        * cuts/utils/unite/cuts-unite.cpp:
        * etc/schemas/cuts-unite.xsd:

          . Bug fix where applying an aspect to a result set returned
            the incorrect set of data if groups were present. Support
            for aspects in the context of groups has temporarily been
            disabled.

Wed Nov 11 03:51:37 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/testing/svcs/logging/Log_Message_Table.h:
        * cuts/utils/testing/svcs/logging/Trace_Importer_App.cpp:
        * cuts/utils/testing/svcs/logging/Trace_Importer_Parser.cpp:

          . Refactored the system execution trace importer to use the
            CUTS_Log_Message_Table class to ensure the database is properly
            initialized.
